# chainritual_miniapp

./: .env.local  .gitignore  Cargo.toml  README.md  package-lock.json  package.json
Component/: WalletCreateForm.tsx
app/: page.tsx
app/api/balance/: route.ts
app/api/chainId/: route.ts
app/api/faucet/: route.ts
app/api/query-balance/: route.ts
app/api/request-chain/: route.ts
app/api/send/: route.ts
app/wallet/: page.tsx
components/: FaucetRequest.tsx  Footer.tsx  HeaderBanner  RequestChainButton.tsx  SendTokenForm.tsx  WalletBalance.tsx  WalletCreateForm.tsx  WalletLoadForm.tsx  WalletManager.tsx
lib/: balance.ts  linera.ts  neynar.ts  safeStorage.ts  signer.client.ts  signer.ts  wallet.client.ts  wallet.ts
services/: lineraFaucet.ts
src/: contract.rs  lib.rs  service.rs  state.rs
tests/: single_chain.rs
wallet_factory/: Cargo.toml
wallet_factory/src/: contract.rs  lib.rs  service.rs  state.rs
wallet_factory/tests/: single_chain.rs
